--- a/assets/CSS/home.css
+++ b/assets/CSS/home.css
@@ -1,39 +1,66 @@
- .note-card {
-            border: 1px solid #e0e0e0;
-            border-radius: 10px;
-            padding: 15px;
-            transition: box-shadow 0.2s;
-            cursor: pointer;
-            height: 100%;
-        }
 
-        .note-card:hover {
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: 0;
+}
+.note-card {
+    border: 1px solid #e0e0e0;
+    border-radius: 10px;
+    padding: 15px;
+    transition: box-shadow 0.2s;
+    cursor: pointer;
+    height: 100%;
+}
 
-        .new-note-btn {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            border-radius: 30px;
-            padding: 12px 24px;
-            font-weight: 500;
-        }
+.note-card:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+}
 
-        .nav-tabs .nav-link.active {
-            font-weight: bold;
-        }
+.new-note-btn {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    border-radius: 30px;
+    padding: 12px 24px;
+    font-weight: 500;
+}
 
-        .header-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 0;
-        }
+.nav-tabs .nav-link.active {
+    font-weight: bold;
+}
 
-        .header-bar h1 {
-            font-size: 2rem;
-            margin: 0;
-        }
+.header-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
+}
 
-        
+.header-bar h1 {
+    font-size: 2rem;
+    margin: 0;
+}
+
+#miModal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1050;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+  width: 800px;         
+  max-width: 90vw;      
+}
+
+.person-scroll {
+    max-height: 170px; 
+    overflow-y: auto;
+}
